--- a/_includes/carousel-with-icon-item.html
+++ b/_includes/carousel-with-icon-item.html
@@ -3,7 +3,7 @@
                 <img src="{{ post.image }}" alt="{{ post.title }}" width="100%">
               {% endif %}
               {% if post.icon %}
-  							<i class="fa {{ post.icon }}"></i>
+  							<i class="fas {{ post.icon }}"></i>
               {% endif %}
 							<div class="desc mt-30">
 								<h3 class="mb-10 fw600 text-center">{{ post.title }}</h3>
