--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,12 +5,12 @@
 	<meta name="keywords" content="{% if page.meta-keywords %}{{ page.meta-keywords }}{% else %}cloud computing, edge computing, Nuvla, NuvlaBox, NuvlaCity, NuvlaScience, NuvlaOutpost, Smart City, Industry 4.0, machine learning, big data, IoT{% endif %}">
 	<meta charset="UTF-8">
 	<title>SixSq | {{ page.title }}</title>
-	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,200i,300,300i,400,400i,600,600i,700,700i,900,900i" rel="stylesheet"> 
+  <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+  <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/v4-shims.js"></script>
 
 	<!--
 		CSS
 		============================================= -->
-	<link rel="stylesheet" href="/css/font-awesome.min.css">
 	<link rel="stylesheet" href="/css/owl.carousel.css">
 	<link rel="stylesheet" href="/css/magnific-popup.css">
 	<link rel="stylesheet" href="/css/bootstrap/bootstrap-grid.css">
