--- a/_includes/highlighted-with-image-item.html
+++ b/_includes/highlighted-with-image-item.html
@@ -15,6 +15,6 @@
               {% else %}
                 {% assign url = post.url  %}
               {% endif %}
-              <a class="btn-sixsq mt-20 color-3 text-center" href="{{ url }}"><i class="fa fa-plus-square-o"></i>  Take a Look</a>
+              <a class="btn-sixsq mt-20 color-3 text-center" href="{{ url }}"><i class="far fa-plus-square"></i>  Take a Look</a>
 						</p>
 					</div>
