--- a/_includes/nuvlabox-device-item.html
+++ b/_includes/nuvlabox-device-item.html
@@ -10,6 +10,6 @@
           {{ post.content }}
         </div>
         <div class="text-center">
-				  <a class="btn-sixsq color-dark" href="{{ post.supplier-url }}"><i class="fa fa-plus-square-o"></i>  Get full spec</a>
+				  <a class="btn-sixsq color-dark" href="{{ post.supplier-url }}"><i class="far fa-plus-square"></i>  Get full spec</a>
         </div>
       </div>
