--- a/_includes/secondary-footer.html
+++ b/_includes/secondary-footer.html
@@ -8,16 +8,16 @@
 						</div>
 					<div class="col-md-4 text-center">
 						<ul class="footer-social color-2 mb-20">
-							<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-							<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-							<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-							<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+							<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+							<li><a href="#"><i class="fab fa-twitter"></i></a></li>
+							<li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+							<li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
 						</ul>
             <p class="text-white">Original web design by <a class="text-white" href="https://www.trust-itservices.com" style="margin: 0 5px">Trust-IT</a></p>
 					</div>
 					<div class="col-md-4 text-right terms">
 						<p><a href="/about/terms">Terms &amp; conditions</a></p>
-						<p><a href="#" id="to-the-top" class="to-the-top"><i class="fa fa-arrow-up"></i></a></p>
+						<p><a href="#" id="to-the-top" class="to-the-top"><i class="fas fa-arrow-up"></i></a></p>
 					</div>
 			</div>
 		</div>
@@ -25,11 +25,11 @@
 	<!-- End Footer -->
 		<div id="social" class="social_side_links animated">
 			<ul>
-				<li><a href="https://twitter.com/sixsq" target="_blank"><i class="fa fa-twitter"></i></a></li>
-				<li><a href="http://www.facebook.com/SixSq-143266939349560/" target="_blank"><i class="fa fa-facebook"></i></a></li>
-				<li><a href="https://it.linkedin.com/company/sixsq" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-				<li><a href="mailto:info@sixsq.com"><i class="fa fa-envelope"></i></a></li>
-				<li><a href="http://github.com/SlipStream"><img src="/img/icon/icon-code.png" alt="icon-code" width="70%"></a></li>
+				<li><a href="https://twitter.com/sixsq" target="_blank"><i class="fab fa-twitter"></i></a></li>
+				<li><a href="http://www.facebook.com/SixSq-143266939349560/" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+				<li><a href="https://it.linkedin.com/company/sixsq" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+				<li><a href="mailto:info@sixsq.com"><i class="fas fa-envelope"></i></a></li>
+				<li><a href="http://github.com/SlipStream"><i class="fab fa-github"></i></a></li>
 			</ul>
 		</div>
 
