--- a/_includes/welcome-newsletter.html
+++ b/_includes/welcome-newsletter.html
@@ -4,7 +4,7 @@
 				<div class="row">
 					<div class="col-md-6 col-sm-12 col-xs-12 title-need-contact">
 						<div class="col-md-2 icon-newsletter">
-							<i class="fa fa-paper-plane-o" aria-hidden="true"></i>
+							<i class="fas fa-paper-plane" aria-hidden="true"></i>
 						</div>
 						<div class="col-md-10 title-newsletter">
 							<h2 class="fw600">Interested?</h2> 
