--- a/_includes/welcome-video.html
+++ b/_includes/welcome-video.html
@@ -1,7 +1,7 @@
 						<div class="col-lg-6 col-md-6 col-sm-12 video-section">
 							<div class="section-title text-center">
 								<h2 class="pb-10 fw600">{{ post.title }}</h2>
-								<div class="widget-section text-center mt-20"><i class="fa fa-circle"></i></div>
+								<div class="widget-section text-center mt-20"><i class="fas fa-circle"></i></div>
 							</div>
 							<div class="content-video mt-15 video">
 								<iframe width="100%" src="{{ post.link }}" frameborder="0" allowfullscreen></iframe>
@@ -11,7 +11,7 @@
 								<p>{{ post.content }}</p>
 							</div>
 							<div class="section-news-button float-right">
-								<a class="btn-sixsq color-2" href="{{ post.link }}"><i class="fa fa-plus-square-o"></i>  Watch</a>
-								<a class="btn-sixsq all" href="/media/videos"><i class="fa fa-plus-square-o"></i>  All videos</a>
+								<a class="btn-sixsq color-2" href="{{ post.link }}"><i class="far fa-plus-square"></i>  Watch</a>
+								<a class="btn-sixsq all" href="/media/videos"><i class="far fa-plus-square"></i>  All videos</a>
 							</div>
 						</div>
