--- a/_includes/whats-next.html
+++ b/_includes/whats-next.html
@@ -6,7 +6,7 @@
 						<h2 class="text-white fw700">What’s next?</h2>
 						<h3 class="text-white fw600">Interested and want to know more?</h3>
 						<p class="text-white fw300 mt-10">We’d be pleased to provide you with further information. Get in touch.</p>
-						<p><a class="text-white btn-sixsq mt-20 text-center" href="/about/contact#get-in-touch"><i class="fa fa-plus-square-o"></i>  Get in touch</a></p>
+						<p><a class="text-white btn-sixsq mt-20 text-center" href="/about/contact#get-in-touch"><i class="far fa-plus-square"></i>  Get in touch</a></p>
 					</div>
 				</div>
 			</div>
