--- a/_layouts/media.html
+++ b/_layouts/media.html
@@ -13,44 +13,44 @@
 				<div class="row justify-content-center icon-is-it-for pb-50 pt-50">
 					<div class="col-md-4 col-sm-6 col-xs-12 item icon animated text-center">
             <div class="icon-title">
-              <i class="fa fa-newspaper-o"></i>
+              <i class="fas fa-newspaper"></i>
             </div>
             <h3 class="mt-20 text-center fw600">News</h3>
 						<p class="mt-10 text-center">Read our news and what others write about us.</p>
-            <a class="btn-sixsq mt-20 color-3 text-center" href="/media/news"><i class="fa fa-plus-square-o"></i>  Read</a>
+            <a class="btn-sixsq mt-20 color-3 text-center" href="/media/news"><i class="far fa-plus-square"></i>  Read</a>
 						</p>
 					</div>
 					<div class="col-md-4 col-sm-6 col-xs-12 item icon animated text-center">
             <div class="icon-title">
-              <i class="fa fa-video-camera"></i>
+              <i class="fas fa-video-camera"></i>
             </div>
             <h3 class="mt-20 text-center fw600">Watch videos</h3>
 						<p class="mt-10 text-center">Sharing our thoughts, tutorials and presentations.</p>
-            <a class="btn-sixsq mt-20 color-3 text-center" href="/media/news"><i class="fa fa-plus-square-o"></i>  Watch</a>
+            <a class="btn-sixsq mt-20 color-3 text-center" href="/media/news"><i class="far fa-plus-square"></i>  Watch</a>
 					</div>
 					<div class="col-md-4 col-sm-6 col-xs-12 item icon animated text-center">
             <div class="icon-title">
-              <i class="fa fa-rss"></i>
+              <i class="fas fa-rss"></i>
             </div>
             <h3 class="mt-20 text-center fw600">Blog</h3>
 						<p class="mt-10 text-center">Read our latest thoughts.</p>
-            <a class="btn-sixsq mt-20 color-3 text-center" href="http://media.sixsq.com/blog"><i class="fa fa-plus-square-o"></i>  Read</a>
+            <a class="btn-sixsq mt-20 color-3 text-center" href="http://media.sixsq.com/blog"><i class="far fa-plus-square"></i>  Read</a>
 					</div>
 					<div class="col-md-4 col-sm-6 col-xs-12 item icon animated text-center">
             <div class="icon-title">
-              <i class="fa fa-book"></i>
+              <i class="fas fa-book"></i>
             </div>
             <h3 class="mt-20 text-center fw600">e-Guides</h3>
 						<p class="mt-10 text-center">Read about our products and services.</p>
-            <a class="btn-sixsq mt-20 color-3 text-center" href="/media/eguides"><i class="fa fa-plus-square-o"></i>  Learn</a>
+            <a class="btn-sixsq mt-20 color-3 text-center" href="/media/eguides"><i class="far fa-plus-square"></i>  Learn</a>
 					</div>
 					<div class="col-md-4 col-sm-6 col-xs-12 item icon animated text-center">
             <div class="icon-title">
-              <i class="fa fa-book"></i>
+              <i class="fas fa-book"></i>
             </div>
             <h3 class="mt-20 text-center fw600">Solution Briefs</h3>
 						<p class="mt-10 text-center">Read about our solutions.</p>
-            <a class="btn-sixsq mt-20 color-3 text-center" href="/media/solution-briefs"><i class="fa fa-plus-square-o"></i>  Explore</a>
+            <a class="btn-sixsq mt-20 color-3 text-center" href="/media/solution-briefs"><i class="far fa-plus-square"></i>  Explore</a>
 					</div>
         </div>
 			</div>
