--- a/_layouts/nuvlabox-spec.html
+++ b/_layouts/nuvlabox-spec.html
@@ -66,7 +66,7 @@
           <div class="col-md-12 mb-50 text-center">
             <img style="max-height: 280px;" src="/img/content/product_descriptions/nuvlabox_product_description_screen_shot.png" alt="nuvlabox_product_description"/>
 						<p class="button mt-10 text-center">
-							<a class="btn-sixsq mt-20 color-3 text-center" href="http://media.sixsq.com/nuvlabox-product-description"><i class="fa fa-plus-square-o"></i> Read more</a>
+							<a class="btn-sixsq mt-20 color-3 text-center" href="http://media.sixsq.com/nuvlabox-product-description"><i class="far fa-plus-square"></i> Read more</a>
 						</p>
           </div>
         </div>
