--- a/_layouts/product.html
+++ b/_layouts/product.html
@@ -27,7 +27,7 @@
             {% endfor %}
 					</div>
     			<div class="col-md-12 text-center">
-    			  <a class="btn-sixsq color-dark" href="/products-and-services/{{ page.product }}/features.html"><i class="fa fa-plus-square-o"></i>  Discover all features</a>
+    			  <a class="btn-sixsq color-dark" href="/products-and-services/{{ page.product }}/features.html"><i class="far fa-plus-square"></i>  Discover all features</a>
           </div>
 				</div>
 			</div>
