--- a/_layouts/slipstream-spec.html
+++ b/_layouts/slipstream-spec.html
@@ -19,7 +19,7 @@
     									<h3 class="mt-20 text-center fw600">{{ post.title }}</h3>
     									<p class="mt-10 text-center">{{ post.content }}</p>
                     	<div class="section-news-button">
-                        <a class="btn-sixsq mt-20 color-2" href="{{ post.link }}"><i class="fa fa-plus-square-o"></i>  Learn more</a>
+                        <a class="btn-sixsq mt-20 color-2" href="{{ post.link }}"><i class="far fa-plus-square"></i>  Learn more</a>
                     	</div>
       							</div>
                   {% endif %}
@@ -39,7 +39,7 @@
           <div class="col-md-12 mb-50 text-center">
             <img style="max-height: 280px;" src="/img/content/product_descriptions/nuvla_product_description_screen_shot.png" alt="nuvla_product_description"/>
 						<p class="button mt-10 text-center">
-							<a class="btn-sixsq mt-20 color-3 text-center" href="http://media.sixsq.com/nuvla-product-description"><i class="fa fa-plus-square-o"></i> Read more</a>
+							<a class="btn-sixsq mt-20 color-3 text-center" href="http://media.sixsq.com/nuvla-product-description"><i class="far fa-plus-square"></i> Read more</a>
 						</p>
           </div>
         </div>
