--- a/_layouts/solutions.html
+++ b/_layouts/solutions.html
@@ -20,7 +20,7 @@
 		<div class="justify-content-center">
       {% for post in site.solutions %}
         {% if post.product == page.product %}
-					<div class="widget-section text-center mt-20 mb-20"><i class="fa fa-circle"></i></div>
+					<div class="widget-section text-center mt-20 mb-20"><i class="fas fa-circle"></i></div>
           {% include highlighted-with-image-full-width-item.html %}
         {% endif %}
       {% endfor %}
