--- a/sass/theme/_section-newsletter.scss
+++ b/sass/theme/_section-newsletter.scss
@@ -10,7 +10,7 @@
 		.icon-newsletter {
 			display: block;
 			float: left;
-			i {
+			svg {
 				color: $color-primary;
 				font-size: 68px;
 			}
