--- a/sass/theme/_section-product-icon-get.scss
+++ b/sass/theme/_section-product-icon-get.scss
@@ -47,7 +47,7 @@
 						p {
 							color: $light;
 						}
-						i {
+						svg {
 							color: $light;
 							font-size: 600%;
 						}
@@ -86,7 +86,7 @@
 							}
 						}
 					}
-					i {
+					svg {
 						font-size: 400%;
 					}
 				}
