--- a/_includes/highlighted-with-image-full-width-item.html
+++ b/_includes/highlighted-with-image-full-width-item.html
@@ -14,7 +14,7 @@
                 {% else %}
                   {% assign url = post.url  %}
                 {% endif %}
-                <a class="btn-sixsq " href="{{ url }}"><i class="fa fa-plus-square-o"></i> Learn more</a>
+                <a class="btn-sixsq " href="{{ url }}"><i class="far fa-plus-square"></i> Learn more</a>
   						</div>
             </div>
   				</div>
