--- a/_includes/primary-footer.html
+++ b/_includes/primary-footer.html
@@ -22,9 +22,9 @@
 					</div>
 					<div class="col-md-4 contact">
 						<ul>
-							<li class="fw400"><i class="fa fa-mobile fa-2x"></i>info/support: +41 22 54 41 733</li>
-							<li class="fw400"><i class="fa fa-envelope"></i><a href="mailto:info@sixsq.com">info@sixsq.com</a></li>
-							<li class="fw400"><i class="fa fa-envelope"></i><a href="mailto:support@sixsq.com">support@sixsq.com</a></li>
+							<li class="fw400"><i class="fas fa-mobile fa-phone fa-fw"></i>info/support: +41 22 54 41 733</li>
+							<li class="fw400"><i class="fas fa-envelope fa-fw"></i><a href="mailto:info@sixsq.com">info@sixsq.com</a></li>
+							<li class="fw400"><i class="fas fa-envelope fa-fw"></i><a href="mailto:support@sixsq.com">support@sixsq.com</a></li>
 						</ul>
 					</div>
 				</div>
