--- a/_includes/welcome-blog-item.html
+++ b/_includes/welcome-blog-item.html
@@ -10,7 +10,7 @@
 		<p class="date mb-10">{{ post.date | date: "%d %B %Y" }}</p>
 	</div>
 	<div class="section-news-button float-right ml-20">
-    <a class="btn-sixsq mt-20 color-2" href="{{ post.url }}"><i class="fa fa-plus-square-o"></i>  Read it</a>
-	  <a class="btn-sixsq mt-20 all" href="/media/news"><i class="fa fa-plus-square-o"></i>  All blog posts</a>
+    <a class="btn-sixsq mt-20 color-2" href="{{ post.url }}"><i class="far fa-plus-square"></i>  Read it</a>
+	  <a class="btn-sixsq mt-20 all" href="/media/news"><i class="far fa-plus-square"></i>  All blog posts</a>
 	</div>
 </div>
