--- a/_includes/welcome-news-item.html
+++ b/_includes/welcome-news-item.html
@@ -10,7 +10,7 @@
 		</div>
 	</div>
 	<div class="section-news-button float-right ml-20">
-    <a class="btn-sixsq mt-20 color-2" href="{{ post.url }}"><i class="fa fa-plus-square-o"></i>  Learn more</a>
-	  <a class="btn-sixsq mt-20 all" href="/media/news"><i class="fa fa-plus-square-o"></i>  All news</a>
+    <a class="btn-sixsq mt-20 color-2" href="{{ post.url }}"><i class="far fa-plus-square"></i>  Learn more</a>
+	  <a class="btn-sixsq mt-20 all" href="/media/news"><i class="far fa-plus-square"></i>  All news</a>
 	</div>
 </div>
