--- a/_layouts/videos.html
+++ b/_layouts/videos.html
@@ -11,12 +11,12 @@
       <div id="talks" class="container">
         <h2>Our Discover Channel</h2>
         <div class="row"></div>
-        <a class="btn-sixsq mb-10 color-3 text-center" href="//www.youtube.com/channel/UCGYw3n7c-QsDtsVH32By1-g"><i class="fa fa-plus-square-o"></i>  Watch on Youtube</a>
+        <a class="btn-sixsq mb-10 color-3 text-center" href="//www.youtube.com/channel/UCGYw3n7c-QsDtsVH32By1-g"><i class="far fa-plus-square"></i>  Watch on Youtube</a>
       </div>
       <div id="tutorials" class="container">
         <h2>Our Tutorials Channel</h2>
         <div class="row"></div>
-        <a class="btn-sixsq mb-50 color-3 text-center" href="//www.youtube.com/channel/UCGYw3n7c-QsDtsVH32By1-g"><i class="fa fa-plus-square-o"></i>  Watch on Youtube</a>
+        <a class="btn-sixsq mb-50 color-3 text-center" href="//www.youtube.com/channel/UCGYw3n7c-QsDtsVH32By1-g"><i class="far fa-plus-square"></i>  Watch on Youtube</a>
       </div>
       <div id="col-template" style="display: none;">
         <div class="col-md-6 col-sm-5 col-xs-12 container spacy mb-20">
