--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -25,7 +25,7 @@
   						<div class="col-md-12 section-title text-center mb-50">
   							<h2 class="pb-10 fw700">Solutions.</h2>
   							<p class="sub-title fw500">Delivering savings with simple and secure cloud and edge solutions.</p>
-  							<div class="widget-section text-center mt-20"><i class="fa fa-circle"></i></div>
+  							<div class="widget-section text-center mt-20"><i class="fas fa-circle"></i></div>
   						</div>
   				</div>
   			</div>
@@ -46,7 +46,7 @@
   					<div class="col-lg-6 col-md-6 col-sm-12 pb-20">
   						<div class="section-title text-center">
   							<h2 class="pb-10 fw700">Our Strategic Partners.</h2>
-  							<div class="widget-section text-center mt-20"><i class="fa fa-circle"></i></div>
+  							<div class="widget-section text-center mt-20"><i class="fas fa-circle"></i></div>
   						</div>
   						<div class="news-homepage-carousel active-screen-news animated">
                 {% for post in site.partners %}
@@ -59,7 +59,7 @@
   					<div class="col-md-6 col-sm-12">
   						<div class="section-title text-center pb-20">
     						<h2 class="pb-10 fw700 text-center">Answering the needs of.</h2>
-  							<div class="widget-section text-center mt-20"><i class="fa fa-circle"></i></div>
+  							<div class="widget-section text-center mt-20"><i class="fas fa-circle"></i></div>
               </div>
   						<div class="focus-need">
                 {% for post in site.welcome %}
@@ -78,7 +78,7 @@
   					<div class="col-lg-6 col-md-6 col-sm-12">
   						<div class="section-title text-center">
   							<h2 class="pb-10 fw700">What people say about us.</h2>
-  							<div class="widget-section text-center mt-20"><i class="fa fa-circle"></i></div>
+  							<div class="widget-section text-center mt-20"><i class="fas fa-circle"></i></div>
   						</div>
   						<div class="news-homepage-carousel active-screen-news animated">
                 {% for post in site.welcome %}
@@ -104,7 +104,7 @@
   					<div class="col-md-6 col-sm-12">
   						<div class="section-title text-center pb-40">
                 <h2 class="pb-10 fw700">In Focus.</h2>
-  							<div class="widget-section text-center mt-20"><i class="fa fa-circle"></i></div>
+  							<div class="widget-section text-center mt-20"><i class="fas fa-circle"></i></div>
               </div>
   						<div class="news-homepage-carousel active-screen-news animated">
                 {% for post in site.news %}
@@ -117,7 +117,7 @@
   					<div class="col-lg-6 col-md-6 col-sm-12">
   						<div class="section-title text-center pb-40">
   							<h2 class="pb-10 fw700">Our Latest Thoughts.</h2>
-  							<div class="widget-section text-center mt-20"><i class="fa fa-circle"></i></div>
+  							<div class="widget-section text-center mt-20"><i class="fas fa-circle"></i></div>
   						</div>
   						<div class="news-homepage-carousel active-screen-news animated">
                 {% for post in site.blog %}
