--- a/_includes/header-inner.html
+++ b/_includes/header-inner.html
@@ -20,12 +20,12 @@
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink-solutions" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Solutions</a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink-solutions">
-                  <a class="dropdown-item" href="/solutions/nuvlacity/overview.html"><b>NuvlaCity</b>: Volumlight&trade; Smart Street Lighting</a>
-                  <a class="dropdown-item" href="/solutions/nuvlacity/overview.html"><b>NuvlaCity</b>: Cyber Intrusion & Security Installations</a>
-                  <a class="dropdown-item" href="/solutions/nuvlaoutpost/overview.html"><b>NuvlaOutpost</b>: Remote communities...</a>
-                  <a class="dropdown-item" href="/solutions/nuvlaoutpost/overview.html"><b>NuvlaOutpost</b>: Education and e-learning - Simple content delivery</a>
-                  <a class="dropdown-item" href="/solutions/nuvlascience/overview.html"><b>NuvlaScience</b>: Helix Nebula Science Cloud...</a>
-                  <a class="dropdown-item" href="/solutions/nuvlascience/overview.html"><b>NuvlaScience</b>: GNSS... Edge Computing - Power at the edge of the network</a>
+                  <a class="dropdown-item" href="/solutions/nuvlacity/overview"><b>NuvlaCity</b>: Volumlight&trade; Smart Street Lighting</a>
+                  <a class="dropdown-item" href="/solutions/nuvlacity/overview"><b>NuvlaCity</b>: Cyber Intrusion & Security Installations</a>
+                  <a class="dropdown-item" href="/solutions/nuvlaoutpost/overview"><b>NuvlaOutpost</b>: Remote communities...</a>
+                  <a class="dropdown-item" href="/solutions/nuvlaoutpost/overview"><b>NuvlaOutpost</b>: Education and e-learning - Simple content delivery</a>
+                  <a class="dropdown-item" href="/solutions/nuvlascience/overview"><b>NuvlaScience</b>: Helix Nebula Science Cloud...</a>
+                  <a class="dropdown-item" href="/solutions/nuvlascience/overview"><b>NuvlaScience</b>: GNSS... Edge Computing - Power at the edge of the network</a>
                 </div>
               </li>
               <!-- <li class="nav-item">
