--- a/_includes/about-sub-menu.html
+++ b/_includes/about-sub-menu.html
@@ -4,31 +4,31 @@
           <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#subNavbarNavDropdown" aria-controls="subNavbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <a class="navbar-brand" href="/about/about-us.html">
+          <a class="navbar-brand" href="/about/about-us">
 						<h2 class="text-white fw600">{{ page.product-name }}.</h2>
           </a>
           <div class="collapse navbar-collapse justify-content-end" id="subNavbarNavDropdown">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" id="navbarMenuLink-about-us" href="/about/about-us.html">About Us</a>
+                <a class="nav-link" id="navbarMenuLink-about-us" href="/about/about-us">About Us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" id="navbarMenuLink-contact" href="/about/contact.html">Contact</a>
+                <a class="nav-link" id="navbarMenuLink-contact" href="/about/contact">Contact</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" id="navbarMenuLink-customers" href="/about/customers.html">Customers</a>
+                <a class="nav-link" id="navbarMenuLink-customers" href="/about/customers">Customers</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" id="navbarMenuLink-partners" href="/about/partners.html">Partners</a>
+                <a class="nav-link" id="navbarMenuLink-partners" href="/about/partners">Partners</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" id="navbarMenuLink-r-and-d" href="/about/r-and-d.html">R&amp;D</a>
+                <a class="nav-link" id="navbarMenuLink-r-and-d" href="/about/r-and-d">R&amp;D</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" id="navbarMenuLink-jobs" href="/about/jobs.html">Jobs</a>
+                <a class="nav-link" id="navbarMenuLink-jobs" href="/about/jobs">Jobs</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" id="navbarMenuLink-terms" href="/about/terms.html">Terms</a>
+                <a class="nav-link" id="navbarMenuLink-terms" href="/about/terms">Terms</a>
               </li>
             </ul>
           </div>
