--- a/_includes/products-sub-menu.html
+++ b/_includes/products-sub-menu.html
@@ -4,19 +4,19 @@
           <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#subNavbarNavDropdown" aria-controls="subNavbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <a class="navbar-brand" href="/products-and-services/{{ page.product }}/overview.html">
+          <a class="navbar-brand" href="/products-and-services/{{ page.product }}/overview">
 						<h2 class="text-white fw600">{{ page.product-name }}.</h2>
           </a>
           <div class="collapse navbar-collapse justify-content-end" id="subNavbarNavDropdown">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" id="navbarMenuLink-overview" href="/products-and-services/{{ page.product}}/overview.html">Overview</a>
+                <a class="nav-link" id="navbarMenuLink-overview" href="/products-and-services/{{ page.product}}/overview">Overview</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" id="navbarMenuLink-features" href="/products-and-services/{{ page.product }}/features.html">Features</a>
+                <a class="nav-link" id="navbarMenuLink-features" href="/products-and-services/{{ page.product }}/features">Features</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" id="navbarMenuLink-tech-spec" href="/products-and-services/{{ page.product }}/tech-spec.html">Tech Specs</a>
+                <a class="nav-link" id="navbarMenuLink-tech-spec" href="/products-and-services/{{ page.product }}/tech-spec">Tech Specs</a>
               </li>
             </ul>
           </div>
