--- a/_layouts/media.html
+++ b/_layouts/media.html
@@ -22,7 +22,7 @@
 					</div>
 					<div class="col-md-4 col-sm-6 col-xs-12 item icon animated text-center">
             <div class="icon-title">
-              <i class="fas fa-video-camera"></i>
+              <i class="fas fa-video"></i>
             </div>
             <h3 class="mt-20 text-center fw600">Watch videos</h3>
 						<p class="mt-10 text-center">Sharing our thoughts, tutorials and presentations.</p>
