--- a/_includes/secondary-footer.html
+++ b/_includes/secondary-footer.html
@@ -3,15 +3,15 @@
 		<div class="container">
 			<div class="row footer-content">
 					<div class="col-md-4">
-							<p class="copyright copy-left-text text-white">Copyright © 2018 SixSq Sàrl. All rights reserved. SixSq, SlipStream, NuvlaBox are registered trademarks of SixSq Sàrl in Switzerland and other countries.
-							</p>
+							<p class="copyright copy-left-text text-white">Copyright © 2018 SixSq Sàrl. All rights reserved. SixSq, SlipStream, NuvlaBox are registered trademarks of SixSq Sàrl in Switzerland and other countries.</p>
+							<p class="copyright copy-left-text text-white">Volumlight is a registered trademarks of Schréder Switzerland in Switzerland and other countries.</p>
 						</div>
 					<div class="col-md-4 text-center">
 						<ul class="footer-social color-2 mb-20">
-							<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-							<li><a href="#"><i class="fab fa-twitter"></i></a></li>
-							<li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-							<li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
+							<li><a href="http://www.facebook.com/SixSq-143266939349560/"><i class="fab fa-facebook-f"></i></a></li>
+							<li><a href="https://twitter.com/sixsq"><i class="fab fa-twitter"></i></a></li>
+							<li><a href="https://it.linkedin.com/company/sixsq"><i class="fab fa-linkedin-in"></i></a></li>
+							<li><a href="https://plus.google.com/+sixsq"><i class="fab fa-google-plus-g"></i></a></li>
 						</ul>
             <p class="text-white">Original web design by <a class="text-white" href="https://www.trust-itservices.com" style="margin: 0 5px">Trust-IT</a></p>
 					</div>
