--- a/_includes/overview-sub-menu.html
+++ b/_includes/overview-sub-menu.html
@@ -8,11 +8,11 @@
 						<h2 class="text-white fw600">{{ page.product-name }}.</h2>
           </a>
           <div class="collapse navbar-collapse justify-content-end" id="subNavbarNavDropdown">
-            <ul class="navbar-nav">
+            <!-- <ul class="navbar-nav">
               <li class="nav-item">
                 <a class="nav-link active" id="navbarMenuLink-overview" href="/{{ page.category }}/{{ page.product }}/overview">Overview</a>
               </li>
-            </ul>
+            </ul> -->
           </div>
         </nav>
 			</div>
