Update welcome page with HPE video

--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -185,19 +185,19 @@
 	
   	<div class="jumbotron">
       <div class="container">
-          <h2>Start your Digital Transformation</h2>
+          <h2>Building the Smart Cities of Tomorrow<h2>
           <div style="background-color: white; padding: 20px">
               <div class="row">
                   <div class="col-lg-7 col-md-7 col-sm-12 col-xs-12 container spacy">
 					  <div class="embed-responsive embed-responsive-16by9">
-                          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/xnpvkLW_VMc" frameborder="0" allowfullscreen></iframe>
+                          <iframe width="560" height="315" src="https://www.youtube.com/embed/fSwKJcG8ShY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 					  </div>
                   </div>
                   <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12">
-                    <h2>Digital transformation means embracing the cloud</h2>
-                    <p>Adopting cloud technologies involves many challenges but cloud is the only proven technology able to deliver the innovation, efficiency and agility necessary to drive modern businesses. Hear what SixSq co-founders have to say about it and find out how to avoid the pitfalls of the digital transformation journey.</p>
+                    <h2>SixSq and Hewlett Packard Enterprise OEM</h2>
+                    <p>As a Hewlett Packard Enterprise OEM partner, SixSq takes advantage of HPE’s full Edgeline series, as well as their global network of customers and business partners. Packaging SixSq’s innovative software in HPE hardware delivers customers with reliable solutions for a wide range of IoT, edge and smart city scenarios.  By using a wide range of devices from small embedded systems all the way to larger units for big data analytics at the edge, we are leveraging data close to its source to improve services and the environment for citizens, as well as deliver energy and cost saving to public and private customers.</p>
 	                <center>
-	                    <a class="btn btn-primary btn-lg" role="button" href="http://thebusinessdebate.com/sixsq-digital-transformation-means-embracing-the-cloud/">Read more &raquo;</a>
+	                    <a class="btn btn-primary btn-lg" role="button" href="http://media.sixsq.com/blog/what-is-a-smart-city">Read more about Smart Cities &raquo;</a>
 	                </center>
                   </div>
               </div>              
