--- a/_layouts/media.html
+++ b/_layouts/media.html
@@ -26,7 +26,7 @@
             </div>
             <h3 class="mt-20 text-center fw600">Watch videos</h3>
 						<p class="mt-10 text-center">Sharing our thoughts, tutorials and presentations.</p>
-            <a class="btn-sixsq mt-20 color-3 text-center" href="/media/news"><i class="far fa-plus-square"></i>  Watch</a>
+            <a class="btn-sixsq mt-20 color-3 text-center" href="/media/videos"><i class="far fa-plus-square"></i>  Watch</a>
 					</div>
 					<div class="col-md-4 col-sm-6 col-xs-12 item icon animated text-center">
             <div class="icon-title">
