Add news items and update text on news header

--- a/_includes/news-item-banner.html
+++ b/_includes/news-item-banner.html
@@ -3,8 +3,8 @@
 			<div class="container">
 				<div class="row">
 					<div class="banner-content col-md-12">
-						<h2 class="text-white text-center mb-30">Read our news and what others write about us</h2>
-						<p class="text-white text-center">News coming from our own press, as well as what we believe is newsworthy from our field, but also partners and customers.</p>
+						<h2 class="text-white text-center mb-30">In The News</h2>
+						<p class="text-white text-center">Discover the latest news and events from SixSq, our partners and customers.</p>
 					</div>
 				</div>
 				<div class="clearfix"></div>
