Refine text on media pages and add news items

--- a/_layouts/media.html
+++ b/_layouts/media.html
@@ -16,7 +16,7 @@
               <i class="fas fa-newspaper"></i>
             </div>
             <h3 class="mt-20 text-center fw600">News</h3>
-						<p class="mt-10 text-center">Read our news and what others write about us.</p>
+						<p class="mt-10 text-center">All the latest from SixSq.</p>
             <a class="btn-sixsq mt-20 color-3 text-center" href="/media/news"><i class="far fa-plus-square"></i>  Read</a>
 						</p>
 					</div>
@@ -24,8 +24,8 @@
             <div class="icon-title">
               <i class="fas fa-video"></i>
             </div>
-            <h3 class="mt-20 text-center fw600">Watch videos</h3>
-						<p class="mt-10 text-center">Sharing our thoughts, tutorials and presentations.</p>
+            <h3 class="mt-20 text-center fw600">Videos</h3>
+						<p class="mt-10 text-center">Sit back and watch.</p>
             <a class="btn-sixsq mt-20 color-3 text-center" href="/media/videos"><i class="far fa-plus-square"></i>  Watch</a>
 					</div>
 					<div class="col-md-4 col-sm-6 col-xs-12 item icon animated text-center">
@@ -41,7 +41,7 @@
               <i class="fas fa-book"></i>
             </div>
             <h3 class="mt-20 text-center fw600">e-Guides</h3>
-						<p class="mt-10 text-center">Read about our products and services.</p>
+						<p class="mt-10 text-center">Insights into where and why our tech is useful.</p>
             <a class="btn-sixsq mt-20 color-3 text-center" href="/media/eguides"><i class="far fa-plus-square"></i>  Learn</a>
 					</div>
 					<div class="col-md-4 col-sm-6 col-xs-12 item icon animated text-center">
@@ -49,7 +49,7 @@
               <i class="fas fa-book"></i>
             </div>
             <h3 class="mt-20 text-center fw600">Solution Briefs</h3>
-						<p class="mt-10 text-center">Read about our solutions.</p>
+						<p class="mt-10 text-center">More detail on our solutions.</p>
             <a class="btn-sixsq mt-20 color-3 text-center" href="/media/solution-briefs"><i class="far fa-plus-square"></i>  Explore</a>
 					</div>
         </div>
