--- a/_layouts/news-article.html
+++ b/_layouts/news-article.html
@@ -38,7 +38,7 @@
           </div>
           <div class="col-md-4">
             {% if page.image %}
-              <img style="padding-top: 10px; max-height: 21em;" src="{{ page.image }}" />
+              <img style="padding-top: 10px; max-height: 21em; max-width: 21em" src="{{ page.image }}" />
             {% endif %}
           </div>
           <div class="col-md-12 mb-20">
