--- a/_layouts/solutions.html
+++ b/_layouts/solutions.html
@@ -12,7 +12,7 @@
 			<div class="container">
 				<div class="row justify-content-center pt-50">
 					<div class="col-md-12 section-title text-center">
-						<h2 class="pb-10 fw700">Discover how {{ page.product-name }} is applied in real life.</h2>
+						<h2 class="pb-10 fw700">Discover real world applications of {{ page.product-name }}.</h2>
 					</div>
 				</div>
 			</div>
