--- a/sass/theme/_section-product-icon-get.scss
+++ b/sass/theme/_section-product-icon-get.scss
@@ -4,93 +4,89 @@
 		@media (max-width: 767px) {
 			min-height: 500px;
 		}
-			.owl-stage {
-				.owl-item {
-					pointer-events:inherit;
-					@include flexbox();
-					@include justify-content(center);
-					a{
-						cursor: pointer;
-						z-index: 200;
-						position: relative;
-					}
-				}
-				.center {
-					transform: scale(1.2);
-					-webkit-transform-origin: top top;
-					-moz-transform-origin: top top;
-					-o-transform-origin: top top;
-					transform-origin: top top;
+		.owl-stage {
+			.owl-item {
+				pointer-events:inherit;
+				@include flexbox();
+				@include justify-content(center);
+				a {
+					cursor: pointer;
+					z-index: 200;
 					position: relative;
-					z-index: 110;
-					background: $color-primary;
-					padding: 40px;
-					-webkit-box-shadow: $p2-shadow;
-					-moz-box-shadow:    $p2-shadow;
-					box-shadow:         $p2-shadow;
-					-webkit-transition: -webkit-transform 0.7s ease;
-					-moz-transition: -moz-transform 0.7s ease;
-					transition: transform 0.7s ease;
-
-					@media (max-width: 767px) {
-						padding: 20px;
-					}
-
-					.item {
-						padding: 0px 20px 20px 20px !important;
-						background: $color-primary;
-						margin-left: 5px;
-						margin-right: 5px;
-						h3{
-							color:$light;
-						}
-						p {
-							color: $light;
-						}
-						svg {
-							color: $light;
-							font-size: 600%;
-						}
-					}
 				}
+			}
+			.center {
+				transform: scale(1.2);
+				-webkit-transform-origin: top top;
+				-moz-transform-origin: top top;
+				-o-transform-origin: top top;
+				transform-origin: top top;
+				position: relative;
+				z-index: 110;
+				background: $color-primary;
+				padding: 40px;
+				-webkit-box-shadow: $p2-shadow;
+				-moz-box-shadow:    $p2-shadow;
+				box-shadow:         $p2-shadow;
+				-webkit-transition: -webkit-transform 0.7s ease;
+				-moz-transition: -moz-transform 0.7s ease;
+				transition: transform 0.7s ease;
+
+				@media (max-width: 767px) {
+					padding: 20px;
+				}
+
 				.item {
-					padding: 30px 50px 0px 50px;
-					min-height: 350px;
-					@media (max-width: 767px) {
-						min-height: 400px;
-					}
-					margin-top: 60px;
-					background: #f4f4f4;
-					.content {
-						.image-content {
-						}
-						.content-text {
-							height: auto;
-							float: left;
-							background: #DDDDDD;
-							padding: 10px 18px 0px 18px;
-							margin: 0;
-							p {
-								margin: 7px;
-								line-height: 19px;
-								color:#aaa;
-								@media (min-width: 768px) and (max-width: 992px) {
-									line-height: 16px;
-								}
-								@media (max-width: 767px) {
-									line-height: 18px;
-								}
-							}
-							.date{
-								
-							}
-						}
+					padding: 0px 20px 20px 20px !important;
+					background: $color-primary;
+					margin-left: 5px;
+					margin-right: 5px;
+					h3, p, ul {
+						color:$light;
 					}
 					svg {
-						font-size: 400%;
+						color: $light;
+						font-size: 600%;
 					}
 				}
 			}
+			.item {
+				padding: 30px 50px 0px 50px;
+				min-height: 350px;
+				@media (max-width: 767px) {
+					min-height: 400px;
+				}
+				margin-top: 60px;
+				background: #f4f4f4;
+				.content {
+					.image-content {
+					}
+					.content-text {
+						height: auto;
+						float: left;
+						background: #DDDDDD;
+						padding: 10px 18px 0px 18px;
+						margin: 0;
+						p {
+							margin: 7px;
+							line-height: 19px;
+							color:#aaa;
+							@media (min-width: 768px) and (max-width: 992px) {
+								line-height: 16px;
+							}
+							@media (max-width: 767px) {
+								line-height: 18px;
+							}
+						}
+						.date{
+						}
+					}
+				}
+				svg {
+					font-size: 400%;
+				}
+			}
+		}
 	}
 	.owl-controls {
 		margin-top: 30px;
