--- a/sass/theme/_solutions-overview.scss
+++ b/sass/theme/_solutions-overview.scss
@@ -34,18 +34,18 @@
   	background-image: url(/img/content/Security_padlocks.jpg);
   }
   &.solution-nuvlacity-volumlight {
-  	background-image: url(/img/banner/volumlight.png);
+  	background-image: url(/img/content/volumlight.jpg);
   }
   &.solution-nuvlaoutpost-remote-communities {
-  	background-image: url(/img/content/street_lighting.jpg);
+  	background-image: url(/img/content/rural_tech.jpg);
   }
   &.solution-nuvlaoutpost-education {
-  	background-image: url(/img/content/street_lighting.jpg);
+  	background-image: url(/img/content/digital_divide.jpg);
   }
   &.solution-nuvlascience-hnscicloud {
-  	background-image: url(/img/content/street_lighting.jpg);
+  	background-image: url(/img/content/europe_people.jpg);
   }
   &.solution-nuvlascience-gnss {
-  	background-image: url(/img/content/street_lighting.jpg);
+  	background-image: url(/img/content/gnss.jpg);
   }
 }
