--- a/_layouts/slipstream-spec.html
+++ b/_layouts/slipstream-spec.html
@@ -10,7 +10,7 @@
       	<div class="container">
       			<div class="col-md-12 mt-20 section-title text-center">
       				<h2 class="pb-10 fw700">Standing on the shoulders of giants</h2>
-              <p>SlipStream builds on the important work of other open source projects. Here are the key technologies, tools and libraries we use to build SlipStream. This ensures a scalable, easy to test and operate software, as well as simple to extend and evolve.</p>
+              <h4 class="mt-20 ml-20 mr-50">SlipStream builds on the important work of other open source projects. Here are the key technologies, tools and libraries we use to build SlipStream. This ensures a scalable, easy to test and operate software, as well as simple to extend and evolve.</h4>
               <div class="row justify-content-center icon-is-it-for pb-50 pt-50">
                 {% for post in site.products-and-services %}
                   {% if post.class == 'tech' %}
