Update welcome page with HPE event & latest news

--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -249,15 +249,15 @@
                 <div class="row row-summary">
                   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                     <h2>What's coming up?</h2>
-                    <h2>Light + Building</h2>
+                    <h2>Open House on Open innovation for IOT and Sustainability</h2>
                   </div>
                   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                    <center><img style="margin-top: 5px; max-width: 150px;" src="/img/content/news/logo_lightandbuilding.jpeg" alt="news"/></center>
+                    <center><img style="margin-top: 5px; max-width: 150px;" src="/img/content/Hewlett_Packard_Enterprise_logo.png" alt="news"/></center>
                   </div>
                 </div>
                 <div>
-                  <p>Join SixSq at the world’s leading trade fair for lighting and building services technology. Meet designers, planners and engineers from around the world and see the latest innovations in lighting.<center>
-                            <a class="btn btn-primary btn-lg" role="button" href="https://light-building.messefrankfurt.com/frankfurt/en.html">Read more &raquo;</a>
+                  <p>Join SixSq at the HPE Customer Centre for discussions and demonstrations of innovative IoT solutions. Plus a tour of this great centre of innovation. Registration is free.<center>
+                            <a class="btn btn-primary btn-lg" role="button" href="https://www.eventbrite.fr/e/billets-portes-ouvertes-au-centre-clients-hpe-innovation-ouverte-dans-liot-et-la-transition-ecologique-44630337541?utm_term=eventurl_text">Sign up here &raquo;</a>
                         </center>
                       <center> <a /></a> </p>
                 </div>
@@ -270,16 +270,16 @@
                 <div class="row row-summary">
                   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                     <h2>Latest News</h2>
-                     <h2>Smart Lighting Wins Swiss Watt d'Or Prize</h2>
+                     <h2>SixSq’s Innovative Cloud Platform Chosen for Big Data Pilot Phase</h2>
                   </div>
                   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                    <center><img style="margin-top: 5px; max-width: 140px;" src="/img/content/logo_volumlight.png" alt="blog"/></center>
+                    <center><img style="margin-top: 5px; max-width: 140px;" src="/img/content/helix-nebula.jpg" alt="blog"/></center>
                   </div>
                 </div>
                 </div>
-                <p>Congratulations to Schréder Swiss for winning this prestigious award in partnership with EKZ.</p>
+                <p>Along with RHEA Group, T-Systems, Exoscale, Advania and Cyfronet, SixSq will be working on the needs of the European scientific community in both commercial and hybrid clouds.</p>
                 <center>  
-                    <a class="btn btn-primary btn-lg" role="button" href="http://sixsq.com/resources/2018/01/18/news-wattdor-volumlight-january-2018.html">Read all about it &raquo;</a>
+                    <a class="btn btn-primary btn-lg" role="button" href="http://sixsq.com/resources/2018/02/06/news-hnscicloud-phase-three-announcement.html">Read all about it &raquo;</a>
                 </center>
               </div>
             </div>
